--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-	"preinstall": "grunt prepublish",
+	"postinstall": "grunt prepublish",
     "test": "grunt test"
   },
   "main": "./index.js",
