--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
-    "postinstall": "grunt postinstall",
+	"build": "grunt build",
     "test": "grunt test"
   },
   "main": "./index.js",
@@ -42,11 +42,7 @@
     "commander": "^2.9.0",
     "detect-indent": "^0.2.0",
     "glob": "^6.0.4",
-    "mkdirp": "^0.5.0",
-	"grunt-contrib-clean": "^0.5.0",
-    "grunt-dtsm": "^0.2.9",
-    "grunt-mocha-test": "^0.11.0",
-    "grunt-ts": "^1.11.2"
+    "mkdirp": "^0.5.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
